--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -4,14 +4,39 @@
     justify-content: center;
     flex-wrap: wrap;
 }
+@mixin flex-end {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+}
+@mixin flex-space-around {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
 @mixin flex-column-center {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
-@button {
+@mixin flex-column-center-start {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+@mixin button {
     padding: 10px 30px;
-    border-radius:5px;
-    border:none;
+    background-color:#000;
+    color:#fff;
+    border:1px solid #000;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    &:hover {
+        background-color: #fff;
+        color: #000;
+    }
 }
