--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,90 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 @import "mixins";
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 5px 0;
+  width: 100vw;
+  background-color: #111;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  .navbar__Logo {
+    font-size: 20px;
+    font-weight: 500;
+    width: 20%;
+    text-align: right;
+  }
+  .navbar__Links {
+    @include flex-end;
+    width: 70%;
+    a {
+      font-size: 16px;
+      cursor: pointer;
+      color: #fff;
+      margin-right: 20px;
+      border: none;
+      background-color: transparent;
+    }
+  }
+}
+.authorization {
+  @include flex-center;
+  width: 100vw;
+  height: 100vh;
+  .login {
+    @include flex-column-center-start;
+    width: 350px;
+    border: 3px dashed #000;
+    border-radius: 10px;
+    button {
+      @include button;
+      margin-bottom: 20px;
+    }
+    .login__Title {
+        margin: 15px 0;
+        font-size: 30px;
+        font-weight: 500;
+    }
+  }
+  .login__Fields {
+      width: 100%;
+      padding: 15px 0;
+      margin: 10px 0;
+      @include flex-column-center;
+      .login__Fields__Title {
+          margin-bottom: 10px;
+          font-size: 20px;
+      }
+      &> div {
+          margin: 20px 0;
+        input {
+            border: none;
+            outline: none;
+            border-bottom: 2px solid #000;
+        }
+        @include flex-column-center;
+      }
+      .login__Fields__warrning {
+          margin: 10px 0 0 0;
+          color: red;
+      }
+  }
 }
