--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,42 +1,53 @@
 @mixin flex-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 @mixin flex-end {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-wrap: wrap;
 }
 @mixin flex-space-around {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 @mixin flex-column-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 @mixin flex-column-center-start {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 @mixin button {
-    padding: 10px 30px;
-    background-color:#000;
-    color:#fff;
-    border:1px solid #000;
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-    &:hover {
-        background-color: #fff;
-        color: #000;
-    }
+  padding: 10px 30px;
+  background-color: #000;
+  color: #fff;
+  border: 1px solid #000;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  &:hover {
+    background-color: #fff;
+    color: #000;
+  }
+}
+@mixin input {
+  border: none;
+  border-bottom: 2px solid #000;
+  outline: none;
+}
+@mixin textarea {
+  resize: vertical;
+  border: none;
+  border-bottom: 2px solid #000;
+  outline: none;
 }
