--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -161,3 +161,28 @@ a {
     margin-bottom: 10px;
   }
 }
+.todo {
+  margin-top: 40px;
+  width: 100vw;
+  min-height:calc(100vh - 40px);
+  color: #000;
+  .todo__Container {
+    width: 80%;
+    margin: 100px auto 0 auto;
+    border: 2px dashed #000;
+    padding: 30px 15px;
+    &>div {
+      margin-top: 15px;
+      font-size: 15pt;
+    }
+    button {
+      margin-top: 55px;
+      @include button;
+    }
+    .todo__Container__Title {
+      font-size: 25pt;
+      font-weight: 700;
+      border-bottom: 2px solid #000;
+    }
+  }
+}
