--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -96,10 +96,12 @@ a {
   text-align: center;
 }
 .admin {
+  margin-top: 40px;
   width: 100vw;
   height: 100vh;
   .admin__Fields {
-    width: 400px;
+    width: 90vw;
+    margin: 100px auto 0 auto;
     padding: 10px 0;
     border: 3px dashed #000;
     button {
@@ -108,22 +110,30 @@ a {
     }
     @include flex-column-center;
     .admin__Fileds__Title {
-      font-size: 30px;
+      font-size: 35px;
       margin-bottom: 20px;
+      width: 90%;
+      border-bottom: 2px dashed #000;
     }
     .admin__Fileds__Title__label {
+      width: 90%;
       margin: 20px 0;
-      @include flex-column-center;
       font-size: 20px;
+      label {
+        font-size: 20pt;
+      }
       textarea {
+        width: 100%;
         @include textarea;
+        font-size: 18px;
       }
       input {
         @include input;
+        width: 100%;
+        font-size: 18px;
       }
     }
   }
-  @include flex-center;
 }
 .home {
   margin-top: 100px;
@@ -131,7 +141,7 @@ a {
   @include flex-column-center;
   .home__Title {
     width: 80%;
-    font-size: 22pt;
+    font-size: 35px;
     margin-bottom: 20px;
   }
   .home__EmptyTodos {
@@ -162,13 +172,13 @@ a {
   }
 }
 .todo {
-  margin-top: 40px;
   width: 100vw;
-  min-height:calc(100vh - 40px);
+  margin-top: 100px;
+  min-height:50vh;
   color: #000;
   .todo__Container {
     width: 80%;
-    margin: 100px auto 0 auto;
+    margin: 0 auto 0 auto;
     border: 2px dashed #000;
     padding: 30px 15px;
     &>div {
