--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -51,3 +51,10 @@
   border-bottom: 2px solid #000;
   outline: none;
 }
+@mixin delete-button {
+  background-color: crimson;
+  border: 1px solid crimson;
+  &:hover {
+    color: crimson;
+  }
+}
