--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,19 +41,27 @@ a {
     @include flex-end;
     width: 70%;
     a,
-    button,
-    div {
+    button {
       font-size: 16px;
       cursor: pointer;
       color: #fff;
+      padding: 0 15px;
+      border: 2px solid #000;
       margin-right: 20px;
       border: none;
       background-color: transparent;
     }
     .navbar__Links__Logout {
       border: 2px solid #fff;
+      background-color: #fff;
+      color: #000;
       padding: 0 15px;
-      border-radius: 10px;
+      margin: 0 !important;
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        background-color: #000;
+        color: #fff;
+      }
     }
   }
 }
@@ -106,11 +114,11 @@ a {
   text-align: center;
 }
 .admin {
-  margin-top: 40px;
+  margin-top: 45px;
   width: 100vw;
   min-height: 50vh;
   .admin__Fields {
-    width: 90vw;
+    width: 80%;
     margin: 100px auto 50px auto;
     padding: 10px 0;
     border: 3px dashed #000;
@@ -149,16 +157,16 @@ a {
   margin-top: 100px;
   width: 100vw;
   @include flex-column-center;
-  .home__Title {
-    width: 80%;
-    font-size: 35px;
-    margin-bottom: 20px;
-  }
-  .home__EmptyTodos {
-    border: none;
-    text-align: center;
-    font-size: 15pt;
-  }
+}
+.home__Title {
+  width: 80%;
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+.home__EmptyTodos {
+  border: none;
+  text-align: center;
+  font-size: 15pt;
 }
 .list,
 .home__EmptyTodos {
@@ -203,6 +211,60 @@ a {
       font-size: 25pt;
       font-weight: 700;
       border-bottom: 2px solid #000;
+    }
+  }
+}
+.navbar__container__username {
+  background-color: #fff;
+  padding: 2px 15px;
+  margin-right: 5px;
+  color: #000;
+  span {
+    font-weight: 700;
+  }
+}
+.router-link-exact-active {
+  border: 2px solid #fff !important;
+  padding: 2px 15px;
+  background-color: #555;
+}
+.buttonFields {
+  width: 80%;
+  @include flex-space-around;
+  margin: 100px auto 0 auto;
+  button {
+    @include button;
+  }
+  .buttonFields__buttons__active {
+    transition: all 0.3s ease-in-out;
+    color: #000;
+    background-color: #fff;
+  }
+}
+.todos {
+  @include flex-column-center;
+  margin: 100px auto 0 auto;
+  .todos_list_for_admin {
+    padding: 10px 15px;
+    border: 2px dashed #000;
+    width: 80%;
+    margin: 10px 0;
+    .todos_list_for_admin__title {
+      margin-bottom: 15px;
+      font-size: 20px;
+      font-weight: 700;
+    }
+    .todos_list_for_admin__text {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      margin-bottom: 10px;
+    }
+    button {
+      @include button;
+    }
+    .delete-btn {
+      @include delete-button;
     }
   }
 }
