--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -268,3 +268,54 @@ a {
     }
   }
 }
+.todo__changer__form {
+  width: 80%;
+  margin: 150px auto 0 auto;
+  padding: 10px 0;
+  border: 3px dashed #000;
+  .todo__changer__form__title {
+    font-size: 35px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    width: 90%;
+    border-bottom: 2px dashed #000;
+  }
+  .todo__changer__form__fields {
+    border: none;
+    outline: none;
+    width: 90%;
+    margin: 40px auto 40px auto;
+    font-size: 18px;
+    input {
+      font-size: 18px;
+      @include input;
+      width: 100%;
+    }
+    textarea {
+      @include textarea;
+      width: 100%;
+      font-size: 18px;
+    }
+  }
+  .form_changer__button {
+    width: 90%;
+    margin: 0 auto 30px auto;
+    button {
+      @include button;
+    }
+  }
+  .todo_goback {
+    margin-right: 15px;
+  }
+}
+.admin__Fields__button {
+  width: 90%;
+}
+.submit {
+  background-color: rgb(0, 156, 0) !important;
+  border: 1px solid rgb(0, 156, 0) !important;
+  &:hover {
+    background-color: #fff !important;
+    color: rgb(0, 156, 0) !important;
+  }
+}
