--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -313,6 +313,7 @@ a {
   width: 90%;
 }
 .submit {
+  margin-right: 5px;
   background-color: rgb(0, 156, 0) !important;
   border: 1px solid rgb(0, 156, 0) !important;
   &:hover {
@@ -412,5 +413,18 @@ a {
     100% {
       transform: rotate(360deg);
     }
+  }
+}
+.notFound {
+  width: 100vw;
+  height: 100vh;
+  position:fixed;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  @include flex-column-center;
+  font-size: 45pt;
+  button {
+    @include button;
   }
 }
