--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -224,7 +224,7 @@ a {
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   &:hover {
-    background-color: #000;
+    background-color: #111111;
     color: #fff;
   }
 }
@@ -499,5 +499,6 @@ a {
     width: 100vw;
     height: 100vh;
     object-fit: cover;
+    pointer-events: none;
   }
 }
